--- a/echo-react-sdk/src/stories/Introduction.mdx
+++ b/echo-react-sdk/src/stories/Introduction.mdx
@@ -27,10 +27,12 @@ import { EchoProvider } from '@echo-systems/react-sdk';
 
 function App() {
   return (
-    <EchoProvider config={{
-      instanceId: 'your-echo-instance-id',
-      apiUrl: 'https://your-echo-server.com',
-    }}>
+    <EchoProvider
+      config={{
+        instanceId: 'your-echo-instance-id',
+        apiUrl: 'https://your-echo-server.com',
+      }}
+    >
       {/* Your app components */}
     </EchoProvider>
   );
@@ -40,32 +42,36 @@ function App() {
 ## Available Components
 
 ### EchoProvider
+
 The root provider component that manages authentication state and configuration.
 
 ### EchoSignIn
+
 A sign-in button component that handles OAuth2 + PKCE authentication flow.
 
 ### EchoTokenPurchase
+
 A component for purchasing tokens through Stripe payments.
 
 ## Hooks
 
 ### useEcho
+
 The main hook for accessing Echo functionality:
 
 ```tsx
 import { useEcho } from '@echo-systems/react-sdk';
 
 function MyComponent() {
-  const { 
-    user, 
-    balance, 
-    isAuthenticated, 
-    isLoading, 
-    signIn, 
+  const {
+    user,
+    balance,
+    isAuthenticated,
+    isLoading,
+    signIn,
     signOut,
     refreshBalance,
-    createPaymentLink 
+    createPaymentLink,
   } = useEcho();
 
   // Use the Echo functionality
@@ -83,6 +89,7 @@ function MyComponent() {
 ## Token Management
 
 Users can purchase tokens using the EchoTokenPurchase component, which:
+
 - Opens a Stripe payment popup
 - Handles the payment flow
 - Automatically refreshes the user's balance after successful payment
