--- a/echo-react-sdk/src/stories/Introduction.mdx
+++ b/echo-react-sdk/src/stories/Introduction.mdx
@@ -15,7 +15,7 @@ Echo is an LLM application platform that provides authentication, token manageme
 ### Installation
 
 ```bash
-npm install @zdql/echo-react-sdk
+npm install @merit-systems/echo-react-sdk
 ```
 
 ### Basic Setup
@@ -23,7 +23,7 @@ npm install @zdql/echo-react-sdk
 Wrap your application with the `EchoProvider`:
 
 ```tsx
-import { EchoProvider } from '@zdql/echo-react-sdk';
+import { EchoProvider } from '@merit-systems/echo-react-sdk';
 
 function App() {
   return (
@@ -60,7 +60,7 @@ A component for purchasing tokens through Stripe payments.
 The main hook for accessing Echo functionality:
 
 ```tsx
-import { useEcho } from '@zdql/echo-react-sdk';
+import { useEcho } from '@merit-systems/echo-react-sdk';
 
 function MyComponent() {
   const {
